force-app/main/default/objects/Guide__c/Guide__c.object-meta.xml
<CustomObject>
    <description>Guides guide the trek.</description>
    <label>Guide</label>
    <nameField>
        <label>Guide Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>