force-app/main/default/objects/Guide__c/fields/isBooked__c.field-meta.xml
<CustomField>
    <fullName>isBooked__c</fullName>
    <label>isBooked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>