force-app/main/default/objects/Guide__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone number</description>
    <label>Phone</label>
    <length>15</length>
    <type>Text</type>
</CustomField>