force-app/main/default/objects/Guide__c/validationRules/Guide_Expereince_More_Than_Two_Years.validationRule-meta.xml
<ValidationRule>
    <fullName>Guide_Expereince_More_Than_Two_Years</fullName>
    <active>true</active>
    <errorConditionFormula>Experience_Years__c  &lt; 2</errorConditionFormula>
    <errorDisplayField>Experience_Years__c</errorDisplayField>
    <errorMessage>At least 2 years of Experience</errorMessage>
</ValidationRule>