force-app/main/default/objects/Guide__c/validationRules/Phone_Not_Greater_Than_10_Starts_With_98.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Not_Greater_Than_10_Starts_With_98</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Phone__c, &quot;^98[0-9]{8}$&quot;))</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Phone Number should be of 10 Digits And must start with 98</errorMessage>
</ValidationRule>